        certificate and add new one.
        * SSL/GSSSLHandle.m: Support new method and move generic code to
        NSFileHandle.m
        * Source/GSSocketStream.m: Implement NSFileHandle SSL/TLS support
        using GNUTLS.
        * Source/NSFileHandle.m: Some ssl/tls restructuring, use GNUTLS if
        available.

2012-09-23  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSSocketStream.m: Expose GSFileHandle ivars for compilation
	with the non-fragile ABI.
	* Headers/GNUstepBase/GSVersionMacros.h: Restore line that was
	accidentally commented out.

2012-09-23  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTimSort.m: Fix typo.

2012-09-21  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSArray.m:
        * Source/NSDate.m:
        * Source/NSDictionary.m:
        * Headers/Foundation/NSArray.h:
        Comment/documentation fixups to avoid warnings etc.
        * Tools/AGSParser.h:
        * Tools/AGSParser.m:
        Fix memory management error causing reference to deallocated object.

2012-09-20  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTimSort.m: A few more timsort bugfixes.

2012-09-20  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GSTimSort.m: Fix bugs in the timsort implementation.

2012-09-20  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSQuickSort.m: Fixed this to compile and (apparently) work.

2012-09-20  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac: Change sort selection to use shellsort by default and
        to make sort selection internal to gnustep-base rather than public.
        * configure: regenerate
        * Headers/GNUstepBase/config.h.in: regenerate
        * Headers/GNUstepBase/GSConfig.h.in: Remove public sort selection info
        * Source/GSQuickSort.m: Use config.h to control build/not-build.
        * Source/NSSortDescriptor.m: Reference the selected sort class to
        ensure that it is linked in  and loaded at runtime.