@@ -62,11 +62,28 @@ ifeq ($(BASE_MAKE_LOADED),)
   # string as UTF-8
   AUXILIARY_OBJCFLAGS += @GS_EXEC_CHARSET@
 
+
+  # Now we have definitions to show whether important dependencies have
+  # been met ... if thse are 0 then some core functi0nailyt is missing.
+
+  # Has GNUTLS been found (for TLS/SSL support throughout)?
   GNUSTEP_BASE_HAVE_GNUTLS=@HAVE_GNUTLS@
+
+  # Has libxml2 been found (for NSXMLNode and related classes)?
   GNUSTEP_BASE_HAVE_LIBXML=@HAVE_LIBXML@
+
+  # Has ICU been found (for NSCalendar, NSLocale, and other locale related)?
+  GNUSTEP_BASE_HAVE_ICU=@HAVE_ICU@
+
+
+  # The next two are a special case ... we should have either one defined
+  # for netservices.  FIXME ... shouldn't these be combined?
+
+  # Has MDNS been found (one of two options for NSNetServices)?
   GNUSTEP_BASE_HAVE_MDNS=@HAVE_MDNS@
+
+  # Has Avahi been found (one of two options for NSNetServices)?
   GNUSTEP_BASE_HAVE_AVAHI=@HAVE_AVAHI@
-  GNUSTEP_BASE_HAVE_UCI=@HAVE_UCI@
 
   # If we determined that the Objective-C runtime does not support
   # native Objective-C exceptions, turn them off.  This overrides
